# dbt-demo

./: .gitignore  README.md  hello.py  pyproject.toml
00_basic_setup/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
00_basic_setup/db/: duckdb.db
00_basic_setup/models/example/: schema.yml
00_basic_setup/models/example2/: my_third_model.sql
00_jaffle_shop/: dbt_project.yml  profiles.yml
00_jaffle_shop/db/: read.py
01_jinja/: .user.yml  dbt_project.yml  profiles.yml
01_jinja/db/: duckdb.db
01_jinja/models/example/: payment_orders.sql  schema.yml
03_databricks/: install_dbt_repo.py
jaffle_shop/: .gitignore  profiles.yml
